# torchforge-data

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_question.md
.github/workflows/: audit.yml  bench.yml  ci.yml
bench_results/: 20260331_235215_hardware_info.txt.txt  20260331_235712_benchmark_summary.txt.txt  20260401_000956_hardware_info.txt.txt  20260401_001444_benchmark_summary.txt.txt
bench_results/reports/20260331_235215/parallel_vs_sequential/parallel_1_thread/base/: benchmark.json  estimates.json  tukey.json
bench_results/reports/20260331_235215/parallel_vs_sequential/parallel_1_thread/new/: sample.json
bench_results/reports/20260331_235215/parallel_vs_sequential/parallel_1_thread/report/: index.html
bench_results/reports/20260331_235215/parallel_vs_sequential/parallel_2_threads/base/: estimates.json  sample.json  tukey.json
bench_results/reports/20260331_235215/parallel_vs_sequential/parallel_2_threads/report/: index.html
bench_results/reports/20260331_235215/parallel_vs_sequential/report/: index.html
bench_results/reports/20260331_235215/sequential_edge_cases/report/: index.html
bench_results/reports/20260331_235215/sequential_throughput/report/: index.html
bench_results/reports/20260401_000956/scalability_curve/report/: index.html
bench_results/reports/20260401_000956/sequential_latency/report/: index.html
bench_results/reports/20260401_000956/single_core_degradation/report/: index.html
benches/: benchmark.rs  rayon_degradation.rs
docs/: BENCHMARKS.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: mmap_fuzz.rs
src/: dataset.rs  error.rs  lib.rs  loader.rs  sampler.rs
tests/: parallel_loading.rs  rayon_degradation.rs  single_core_degradation.rs
(+209 files in other folders)
