[package]
name = "torchforge-data"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Zero-copy, streaming DataLoader for edge-native ML pipelines in Rust."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/torchforge-rs/torchforge-data"
homepage = "https://github.com/torchforge-rs/torchforge-data"
keywords = ["machine-learning", "dataloader", "edge", "streaming", "rust"]
categories = ["science::ml", "embedded"]

[badges]
crates-io = { repository = "torchforge-data" }
docs-rs = { documentation = "torchforge-data" }
license = { name = "Apache-2.0" }

[dependencies]
memmap2 = "0.9"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[workspace]
members = [".", "fuzz"]
exclude = []

[workspace.metadata.fuzz]
targets = ["mmap_fuzz"]
